--- a/src/README
+++ b/src/README
@@ -1,3 +1,3 @@
-Example illustrating how to use the HostAutoConfigurator
-to automatically assign IP addresses to wireless hosts at runtime.
-
+Host: complete host model with placeholders for all network layers + overlay and 3 application layers.
+DummyUnderlayConfigurator: dummy model (does nothing) introduced for legacy compatilibilty with Oversim P2P protocol models.
+ZeroChurn: same, dummy model.
